@@ -29,6 +29,7 @@ libgigedit_la_SOURCES = \
 	CombineInstrumentsDialog.cpp CombineInstrumentsDialog.h \
 	midirules.cpp midirules.h \
 	Settings.cpp Settings.h \
+	scripteditor.cpp scripteditor.h \
 	$(wraplabel) $(mac_src)
 libgigedit_la_LIBADD = \
 	$(GTKMM_LIBS) $(GIG_LIBS) $(SNDFILE_LIBS)
